--- a/capp/templates/home.html
+++ b/capp/templates/home.html
@@ -46,7 +46,6 @@
 </section> 
 
 
-
 <!-- Developers -->
 <section class="section_developers">
   <div class="container">
@@ -54,62 +53,46 @@
     <div class="developers" style="display:block;">
       <h1 style="text-align:center;"> Our Team</h1>
       <p>
-        Our team of economists and developers ... Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, ut? Praesentium quidem sunt perspiciatis doloremque fugiat nesciunt quaerat ullam, pariatur iure unde ratione ipsum adipisci repellendus, repudiandae hic sit, temporibus molestias corrupti aut soluta sequi! Architecto deleniti expedita nisi repudiandae enim eum quas odit facilis placeat neque porro, animi incidunt consectetur. Maiores ab saepe tempora, iure asperiores beatae suscipit cum ipsum, rerum doloremque reprehenderit dolorum debitis, aliquam quasi. Maiores corporis fuga quasi nesciunt dolor iste, inventore necessitatibus unde!
+        This app was originally developed during the cource FOR19 at NHH held by Mario Blazquez. The entire app 
+        exists because of the teaching and methods developed by him. Thank you Mario! 
       </p>      
     </div>
 
     <div class="developers">
         <div class="box">
-          <img src="https://randomuser.me/api/portraits/men/10.jpg" alt="" style="border-radius: 50%; width:200px;">
-          <h3>Developer 1</h3>
-          <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quia repellat omnis? Odit enim hic atque dolorem iste natus inventore perspiciatis vitae dolore animi veritatis aut nemo unde similique, officia reiciendis ex architecto voluptates soluta ab tempore facilis quisquam cum.
+          <img src="\static/images/Mario.jpg" style="border-radius: 50%; width:200px;" alt=""> 
+          <h3>Mario Blazguez de Paz</h3>
+          <p> Mario Blázquez de Paz was appointed postdoc researcher at the Department of Business and Management Science, NHH in 2020. Previously, he did another two postdocs, 
+            one at the Norwegian University of Science and Technology in Trondheim and another at the Research Institute of Industrial Economics (IFN) in Stockholm. 
+            He completed a Master in Economics at European University Institute and a PhD. in Economics at University of Bologna.
+            His research focuses on the analysis of electricity markets in the presence of transmission constraints and the design of electricity auctions using theoretical models and experiments. 
+            Currently, he is working analysing the impact of Renewables Certificates of Origin on the competition in electricity markets.
           </p>
           <div class="section_container_buttons_developers">
             <a class="btn_developers" href="#"  target="_blank">Curriculum</a>
           </div> 
         </div>
         <div class="box">
-          <img src="https://randomuser.me/api/portraits/women/11.jpg" alt="" style="border-radius: 50%; width:200px;">
-          <h3>Developer 2</h3>
-          <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quia repellat omnis? Odit enim hic atque dolorem iste natus inventore perspiciatis vitae dolore animi veritatis aut nemo unde similique, officia reiciendis ex architecto voluptates soluta ab tempore facilis quisquam cum.
+          <img src="\static/images/nhh.png" style="border-radius: 50%; width:200px;" alt=""> 
+          <h3>Norges Handelshøyskole</h3>
+          <p> Norges handelshøyskole is Norway's oldest scientific college within business economics and administrative subjects, historically called business subjects.
+            In close cooperation with the business community and society, they develop new knowledge and promote value creation for a sustainable future.
+            If it weren't for NHH this course would never take place, and this app would never be developed. 
           </p>
           <div class="section_container_buttons_developers">
             <a class="btn_developers" href="#"  target="_blank">Curriculum</a>
           </div> 
         </div>           
         <div class="box">
-          <img src="https://randomuser.me/api/portraits/men/12.jpg" alt="" style="border-radius: 50%; width:200px;">
-          <h3>Developer 3</h3>
-          <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quia repellat omnis? Odit enim hic atque dolorem iste natus inventore perspiciatis vitae dolore animi veritatis aut nemo unde similique, officia reiciendis ex architecto voluptates soluta ab tempore facilis quisquam cum.
-          </p>
+          <img src="\static/images/Elise.jpg" style="border-radius: 50%; width:225px;" alt=""> 
+          <h3>Elise Isolde Stenevik</h3>
+          <p> Elise Isolde Stenevik (23) is soon finishing her third year as a student in economy at NHH. Her field of interest is within designing an economy suited for 
+              sustainable growth. We are facing numerous challenges ahead as humanity, and reshaping the economy in a way to handle these is crucial for the welfare of our societies. 
+              Besides studying Elise enjoys playing football with her friends. 
           <div class="section_container_buttons_developers">
             <a class="btn_developers" href="#"  target="_blank">Curriculum</a>
           </div> 
-        </div>     
-    </div>
-
-    <div class="developers">
-      <div class="box2">
-        <img src="https://randomuser.me/api/portraits/women/12.jpg" alt="" style="border-radius: 50%; width:200px;">
-        <h3>Developer 4</h3>
-        <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quia repellat omnis? Odit enim hic atque dolorem iste natus inventore perspiciatis vitae dolore animi veritatis aut nemo unde similique, officia reiciendis ex architecto voluptates soluta ab tempore facilis quisquam cum.
-        </p>
-        <div class="section_container_buttons_developers">
-          <a class="btn_developers" href="#"  target="_blank">Curriculum</a>
-        </div> 
-      </div>
-      <div class="box2">
-        <img src="https://randomuser.me/api/portraits/women/13.jpg" alt="" style="border-radius: 50%; width:200px;">
-        <h3>Developer 5</h3>
-        <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quia repellat omnis? Odit enim hic atque dolorem iste natus inventore perspiciatis vitae dolore animi veritatis aut nemo unde similique, officia reiciendis ex architecto voluptates soluta ab tempore facilis quisquam cum.
-        </p>
-        <div class="section_container_buttons_developers">
-          <a class="btn_developers" href="#"  target="_blank">Curriculum</a>
-        </div> 
-      </div>           
-      <div class="box2">
-
-      </div>     
+        </div>         
   </div>
 
   </div>          
