--- a/capp/templates/home.html
+++ b/capp/templates/home.html
@@ -19,7 +19,10 @@
         {% endwith %}
         <h1 style="font-size:55px;"><span class="text-logo"> Home</span></h1>
         <p style="text-align:left;">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat dolores quos asperiores repellendus facilis cum illo aperiam odit doloremque nostrum. Totam excepturi labore voluptatibus iusto sapiente quisquam consectetur optio magnam voluptates omnis vel officia alias distinctio quas laborum reiciendis ratione inventore veniam, cupiditate doloribus dolore, eius natus a. Magni inventore consequuntur voluptas reprehenderit perferendis! Molestias aspernatur rem autem aut temporibus.
+            This app seeks to help individuals and cooperations to keep track of their carbon emissions from the transport sector. 
+            By knowing exctactly the size of your transport footprint, and which transport method you have the biggest potential to improve, 
+            we hope to incentivise our users to reduce their total emissions. We are currently working on providing the users with customized 
+            suggestions on ways to most efficently reduce your carbon emissions. 
         </p>
         {% if current_user.is_authenticated %}
         {% else %}
